--- a/task1/task1.html
+++ b/task1/task1.html
@@ -2,9 +2,53 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Biography page</title>
 </head>
 <body>
+<h1>Шевченко Тарас Григорович</h1>
 
+<p><b><em>Тарас Григорович Шевченко</em></b>(відомий також як <b><em>Кобза́р;</em></b> 25 лютого (9 березня) 1814,
+    с. Моринці, Київська губернія, Російська імперія (нині Звенигородський район, Черкаська область, Україна) — 26 лютого (10 березня)
+    1861, Санкт-Петербург, Російська імперія) — український поет, письменник (драматург, прозаїк), художник (живописець, гравер),
+    громадський та політичний діяч. Національний герой і символ України.</p>
+
+<h1>Життєпис</h1>
+<h2>Дитинство і молодість</h2>
+<p>Тарас Шевченко народився 25 лютого (9 березня) 1814 року[7] в селі Моринці, нині Звенигородського району Черкаської області,
+    Україна (за тогочасним адмінподілом Пединівська волость, Звенигородського повіту Київської губернії). Був третьою дитиною селян-кріпаків
+    Григорія Івановича Шевченка і Катерини Якимівни Бойко після сестри Катерини (8 (20) листопада 1804 — близько 1848) та брата Микити (16 (28) травня 1811 — близько 1870)[8].
+
+    Згідно з родинними переказами, Тарасові діди й прадіди з батьківського боку походили від козака Андрія, який на початку XVIII століття
+    прийшов із Запорізької Січі. Батьки його матері, Катерини Якимівни Бойко, були переселенцями з Прикарпаття.[9]
+
+    1816 року сім'я Шевченків переїхала до села Кирилівка (нині Шевченкове Звенигородського району) Звенигородського повіту,
+    звідки походив Григорій Іванович[10]. Дитячі роки Тараса пройшли в цьому селі. 12 (24) травня 1816 року
+    народилася Тарасова сестра Ярина[11], а 26 січня (7 лютого) 1819 року — сестра Марія[12]. Одного разу малий Тарас пішов шукати
+    «залізні стовпи, що підпирають небо», і заблукав у полі. Чумаки, зустрівши хлопця, забрали його з собою й увечері привезли до Кирилівки[13][14].
+    8 (20) березня 1821 року народився Тарасів брат Йосип[15].
+
+    Восени 1822 року Тарас Шевченко почав учитися грамоти в місцевого дяка Совгиря[16]. Того часу ознайомився з творами Григорія Сковороди.
+    У період 1822−1828 років він намалював «Коні. Солдати» (цього твору не знайдено)[17].</p>
+<h2>Викуп</h2>
+<p>Улітку 1836 року під час одного з петербурзьких нічних рисувальних сеансів у Літньому саду він познайомився зі своїм земляком — художником Іваном Сошенком[60],
+    а через нього — з Євгеном Гребінкою, Василем Григоровичем і Олексієм Венеціановим, які познайомили Тараса з упливовим при дворі поетом Василем Жуковським[61].
+    Сошенко вмовив Ширяєва відпустити Шевченка на місяць, щоб той відвідував зали живопису Товариства заохочення художників[62]. Комітет цього товариства,
+    «розглянувши рисунки стороннього учня Шевченка», ухвалив «мати його на увазі на майбутнє».
+
+    5 (17) квітня 1838 року Шевченко разом із Аполлоном Мокрицьким відвідав Ермітаж, де вони оглянули твори видатних художників (Ван-Дейка, Рубенса, Веласкеса, Рені та інших)
+    і говорили про цінність їхніх полотен.
+
+    Навесні 1838-го Карл Брюллов і Василь Жуковський вирішили викупити молодого поета з кріпацтва. Енгельгардт погодився відпустити кріпака за великі гроші — 2500 рублів[63].
+    На той час ця сума була еквівалентна 45 кілограмам чистого срібла[64]. Щоб здобути такі гроші, Карл Брюллов намалював портрет Василя Жуковського — вихователя спадкоємця престолу,
+    і портрет розіграли в лотереї, у якій взяла участь імператорська родина[65]. Лотерея відбулася 22 квітня (4 травня) 1838 року[66], а 25 квітня (7 травня) Шевченкові видали відпускну[63].
+
+    Дослідники-мистецтвознавці датують періодом 1837—1838 років також малярські твори, про які є згадка у Шевченковій повісті «Художник»,
+    а саме:</p>
+<ul>
+    <li>«Анатомічна статуя Фішера»;</li>
+    <li>«Мідас, повішений Аполлоном»;</li>
+    <li>«Едіп, Антігона та Полінік»;</li>
+    <li>«Єзекіїль на полі, всіяному кістками».</li>
+</ul>
 </body>
 </html>
