--- a/lesson8/index.html
+++ b/lesson8/index.html
@@ -7,17 +7,32 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="first"></div>
-     <a class="cherry">CHERRY</a>
-    <br>
-    <a class="Lorem">Lorem ipsum dolor sit amet</a>
+<div class="container">
+
+<div class="header">
+    <header>CHERRY</header>
     <input type="search" class="search" placeholder="Search...">
 </div>
-
+    <a class="Lorem">Lorem ipsum dolor sit amet</a>
 <div class="Layer_32">
     <a class="Eaten">Eaten berry</a>
     <br>
     <a class="and_go">and go for a walk</a>
+</div>
+    <ul class="menu">
+        <li><a class="menu1" href="">Home</a></li>
+        <li><a class="menu1" href="">Sliders</a></li>
+        <li><a class="menu1" href="">Portfolio</a></li>
+        <li><a class="menu1" href="">Styles</a></li>
+        <li><a class="menu1" href="">Blog</a></li>
+        <li><a class="menu1" href="">Cherry</a></li>
+        <li><a class="menu1" href="">Contact</a></li>
+    </ul>
+    
+    <div class="main">
+        
+    </div>
+
 </div>
 </body>
 </html>
